# server/src/main/java/hu/personal/opsystem/controller/ApplicationController.java
@@ -6,17 +6,29 @@ import hu.personal.opsystem.service.ApplicationService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
 
 @RequiredArgsConstructor
 @RestController
 public class ApplicationController implements ApplicationApi {
+    public static final String APPLICATION_API_PATH = "api/v1/application";
+
     private final ApplicationService applicationService;
 
     @Override
     public ResponseEntity<ApplicationDto> createApplication(ApplicationDto applicationDto) {
-        return ResponseEntity.ok(applicationService.createApp(applicationDto));
+        ApplicationDto savedApplcation = applicationService.createApp(applicationDto);
+
+        URI location = ServletUriComponentsBuilder
+                .fromPath(APPLICATION_API_PATH)
+                .path("/{id}")
+                .buildAndExpand(savedApplcation.getId())
+                .toUri();
+
+        return ResponseEntity.created(location).body(savedApplcation);
     }
 
     @Override
